--- a/1729300665-citas.md
+++ b/1729300665-citas.md
@@ -51,7 +51,7 @@ investigación» (Azócar, 2013, p.3).
 
 # Cantidad de autores
 
-![Autores](/imag/Pasted image 20241018210130.png)
+![Autores](/imag/autores.png)
 
 # Parafraseo
 
